feat: add preset for primevue, login page

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply dark:bg-[#030712] dark:text-white/90;
+  }
+}
